--- a/package.json
+++ b/package.json
@@ -29,31 +29,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.8",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^4.0.0",
-    "@types/chai": "^4.2.6",
-    "@types/mocha": "^5.2.7",
-    "chai": "^4.2.0",
-    "decimal.js": "^10.2.1",
-    "ethereum-waffle": "^3.0.2",
-    "ethers": "^5.0.8",
-    "hardhat": "^2.2.0",
-    "hardhat-typechain": "^0.3.5",
-    "mocha": "^6.2.2",
-    "mocha-chai-jest-snapshot": "^1.1.0",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.59",
     "solhint": "^3.2.1",
-    "solhint-plugin-prettier": "^0.0.5",
-    "ts-generator": "^0.1.1",
-    "ts-node": "^8.5.4",
-    "typechain": "^4.0.0",
-    "typescript": "^3.7.3"
+    "solhint-plugin-prettier": "^0.0.5"
   },
   "scripts": {
-    "compile": "hardhat compile",
-    "test": "hardhat test"
+    "compile": "forge build --hardhat",
+    "test": "forge test --hardhat",
+    "lint": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
+    "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts}\"",
+    "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts}\""
   }
 }
