forge install: solmate

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "test/lib/solmate"]
 	path = test/lib/solmate
 	url = https://github.com/rari-capital/solmate
+[submodule "lib/solmate"]
+	path = lib/solmate
+	url = https://github.com/rari-capital/solmate
